<resources>
    <string name="reset_msg">Back to the original showcase?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="accept">Accept</string>
    <string name="no">No</string>
    <string name="del_user_items">Delete user items</string>
    <string name="search_hint">Search item</string>
    <string name="reset">Reset</string>
    <string name="share">Share</string>
    <string name="update">Update</string>
    <string name="share_intro">Need goods:</string>
    <string name="del_toolbar_text">Selected for deletion: </string>

    <string name="widget_empty">Empty</string>
    <string name="widget_basket_title">Basket</string>
    <string name="widget_loading_short" translatable="false">...</string>
    <string name="widget_loading_long">Loading…</string>
    <string name="widget_item_removed">"Item removed: "</string>

    <string name="about_app">About app</string>
    <string name="about_msg">Pocket Basket is a shopping list application.</string>
    <string name="about_title" translatable="false">@string/app_name</string>
    <string name="about_developer">Developer:</string>
    <string name="about_email" translatable="false">alektas@inbox.ru</string>
    <string name="about_license">(license)</string>
    <string name="about_google_material" translatable="false">- Google Material</string>
    <string name="about_bomsymbols" translatable="false">- BomSymbols</string>
    <string name="about_jeff_portaro" translatable="false">- Jeff Portaro</string>
    <string name="about_alektas">- Totilas A.A.</string>
    <string name="about_icons_by">Icons by:</string>
    <string name="about_version">Version: %s</string>

    <string name="guide">Hints</string>
    <string name="guide_accept_title">Do you want to get hints?</string>
    <string name="guide_accept_msg">Hints can be turned on/off by selecting \u00ABHints\u00BB in the menu</string>

    <string name="guide_change_mode">Display mode can be changed by swipe</string>
    <string name="guide_add_item">Items are added to the basket by tap</string>
    <string name="guide_check_item">Products are marked by tap on the icon</string>
    <string name="guide_move_item">Items in the basket are moved by the handler or a long press on the icon</string>
    <string name="guide_remove_item">You can also remove an item from the basket with a swipe to the right</string>
    <string name="guide_del_mode">You can go to the deletion mode by long pressing on the item</string>
    <string name="guide_delete_items">You can delete selected items or cancel deletion. Non-user items can be restored by \"Reset\" in the menu.</string>
    <string name="guide_floating_menu">Extra menu is called by long pressing on the button</string>
    <string name="guide_check_all">Mark all items</string>
    <string name="guide_del_checked">Remove marked items</string>
    <string name="guide_close_menu">Close the menu</string>

    <string name="apache_license_link" translatable="false">https://www.apache.org/licenses/LICENSE-2.0.html</string>
    <string name="cc_license_link" translatable="false">http://creativecommons.org/licenses/by/3.0/</string>
    <string name="jeff_link" translatable="false">https://pixelbuddha.net/freebie/touch-gestures-icons</string>
    <string name="bom_link" translatable="false">https://www.iconfinder.com/korawan_m</string>
    <string name="google_material_link" translatable="false">https://material.io/tools/icons/</string>
    <string name="about_developer_name">\u00A9 2020 Totilas A.A.</string>
    <string name="privacy_policy_link">https://drive.google.com/open?id=1XWuf-8qf-wK6Z9u_-zuvpheG8tAV0_ZW</string>
    <string name="del_mode_counter_placeholder" translatable="false">0</string>
    <string name="descr_fam_del_marked_btn">Delete marked basket items</string>
    <string name="descr_fam_mark_btn">Mark all basket items</string>
    <string name="msg_share_unsuccessful_basket_empty">Add items to basket to share list</string>
    <string name="share_unsuccessful_title">Unable to share list</string>
    <string name="privacy_policy_label">Privacy Policy</string>
    <string name="ad_attribution" translatable="false">Ad</string>
    <string name="check_all">Check all</string>
    <string name="del_checked">Delete checked</string>
    <string name="guide_basket_menu">You can mark all items in the basket or delete marked ones in the toolbar below</string>
    <string name="remove_checked_items_success">Items removed from the basket</string>
    <string name="remove_checked_items_fail">Mark the items in the basket that you want to remove</string>
    <string name="reset_showcase_success">Showcase recovered successfully</string>
    <string name="reset_showcase_fail">Failed to restore the showcase</string>
    <string name="basket_placeholder_empty_cart">Basket is empty</string>

</resources>
