<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".ui.MainActivity">

    <fragment
        android:id="@+id/fragment_categories"
        android:name="alektas.pocketbasket.ui.categories.CategoriesFragment"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fragment_showcase"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_chainStyle="packed"
        tools:layout="@layout/fragment_categories"/>

    <fragment
        android:id="@+id/fragment_showcase"
        android:name="alektas.pocketbasket.ui.showcase.ShowcaseFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/fragment_categories"
        app:layout_constraintEnd_toStartOf="@id/fragment_basket"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_chainStyle="packed"
        tools:layout="@layout/fragment_showcase"/>

    <fragment
        android:id="@+id/fragment_basket"
        android:name="alektas.pocketbasket.ui.basket.BasketFragment"
        android:layout_width="@dimen/width_basket_narrow"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/fragment_showcase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_chainStyle="packed"
        tools:layout="@layout/fragment_basket"/>

    <!-- Guidelines -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top_hor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom_hor_80"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80"/>

    <!-- Guide: bg -->

    <ImageView
        android:id="@+id/guide_bg_full_img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        app:srcCompat="@color/bg_guide_fullscreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <!-- Guide: change mode -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/guide_change_mode_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Hint"
        app:cornerRadius="@dimen/corners_guide_hint"
        app:rippleColor="@color/colorPrimaryDark"
        app:icon="@drawable/ic_menu_info_outline_darkgreen_24dp"
        app:iconTint="@color/colorPrimaryDark"
        app:iconSize="@dimen/size_guide_hint_icon"
        android:text="@string/guide_change_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom_hor_80"/>

    <ImageView
        android:id="@+id/guide_scroll_hor_img"
        android:layout_width="@dimen/size_guide_gesture_icon"
        android:layout_height="@dimen/size_guide_gesture_icon"
        android:visibility="invisible"
        app:srcCompat="@drawable/ic_guide_scroll_horizontal"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <!-- Guide: add item -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/guide_add_by_tap_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Hint"
        app:cornerRadius="@dimen/corners_guide_hint"
        app:rippleColor="@color/colorPrimaryDark"
        app:icon="@drawable/ic_menu_info_outline_darkgreen_24dp"
        app:iconTint="@color/colorPrimaryDark"
        app:iconSize="@dimen/size_guide_hint_icon"
        android:text="@string/guide_add_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom_hor_80"/>

    <ImageView
        android:id="@+id/guide_tap_add_img"
        android:layout_width="@dimen/size_guide_gesture_icon"
        android:layout_height="@dimen/size_guide_gesture_icon"
        android:visibility="invisible"
        app:srcCompat="@drawable/ic_guide_tap"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="@id/fragment_showcase"
        app:layout_constraintStart_toStartOf="@id/fragment_showcase"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <!-- Guide: mark item in Basket -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/guide_check_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Hint"
        app:cornerRadius="@dimen/corners_guide_hint"
        app:rippleColor="@color/colorPrimaryDark"
        app:icon="@drawable/ic_menu_info_outline_darkgreen_24dp"
        app:iconTint="@color/colorPrimaryDark"
        app:iconSize="@dimen/size_guide_hint_icon"
        android:text="@string/guide_check_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom_hor_80"/>

    <ImageView
        android:id="@+id/guide_tap_check_img"
        android:layout_width="@dimen/size_guide_gesture_icon"
        android:layout_height="@dimen/size_guide_gesture_icon"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/fragment_basket"
        app:layout_constraintEnd_toEndOf="@id/fragment_basket"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/fragment_basket"
        app:layout_constraintTop_toTopOf="@id/fragment_basket"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/ic_guide_tap" />

    <!-- Guide: move item in Basket -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/guide_move_item_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Hint"
        app:cornerRadius="@dimen/corners_guide_hint"
        app:rippleColor="@color/colorPrimaryDark"
        app:icon="@drawable/ic_menu_info_outline_darkgreen_24dp"
        app:iconTint="@color/colorPrimaryDark"
        app:iconSize="@dimen/size_guide_hint_icon"
        android:text="@string/guide_move_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom_hor_80"/>

    <ImageView
        android:id="@+id/guide_scroll_vert_img"
        android:layout_width="@dimen/size_guide_gesture_icon"
        android:layout_height="@dimen/size_guide_gesture_icon"
        android:visibility="invisible"
        app:srcCompat="@drawable/ic_guide_scroll_vertical_mir_cut"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintEnd_toEndOf="@id/fragment_basket"
        app:layout_constraintStart_toStartOf="@id/fragment_basket"
        app:layout_constraintTop_toTopOf="@id/fragment_basket"
        app:layout_constraintBottom_toBottomOf="@id/fragment_basket"/>

    <!-- Guide: remove item from Basket -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/guide_swipe_remove_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Hint"
        app:cornerRadius="@dimen/corners_guide_hint"
        app:rippleColor="@color/colorPrimaryDark"
        app:icon="@drawable/ic_menu_info_outline_darkgreen_24dp"
        app:iconTint="@color/colorPrimaryDark"
        app:iconSize="@dimen/size_guide_hint_icon"
        android:text="@string/guide_remove_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom_hor_80"/>

    <ImageView
        android:id="@+id/guide_swipe_right_img"
        android:layout_width="@dimen/size_guide_gesture_icon"
        android:layout_height="@dimen/size_guide_gesture_icon"
        android:visibility="invisible"
        app:srcCompat="@drawable/ic_guide_swipe_right"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintEnd_toEndOf="@id/fragment_basket"
        app:layout_constraintStart_toStartOf="@id/fragment_basket"
        app:layout_constraintTop_toTopOf="@id/fragment_basket"/>

    <!-- Guide: turn on delete mode -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/guide_del_mode_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Hint"
        app:cornerRadius="@dimen/corners_guide_hint"
        app:rippleColor="@color/colorPrimaryDark"
        app:icon="@drawable/ic_menu_info_outline_darkgreen_24dp"
        app:iconTint="@color/colorPrimaryDark"
        app:iconSize="@dimen/size_guide_hint_icon"
        android:text="@string/guide_del_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom_hor_80"/>

    <ImageView
        android:id="@+id/guide_del_mode_img"
        android:layout_width="@dimen/size_guide_gesture_icon"
        android:layout_height="@dimen/size_guide_gesture_icon"
        android:visibility="invisible"
        app:srcCompat="@drawable/ic_guide_press_and_hold"
        app:layout_constraintVertical_bias="0.25"
        app:layout_constraintEnd_toEndOf="@id/fragment_showcase"
        app:layout_constraintStart_toStartOf="@id/fragment_showcase"
        app:layout_constraintTop_toTopOf="@id/fragment_showcase"
        app:layout_constraintBottom_toBottomOf="@id/fragment_showcase"/>

    <!-- Guide: delete items from Showcase -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/guide_delete_items_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Hint"
        app:cornerRadius="@dimen/corners_guide_hint"
        app:rippleColor="@color/colorPrimaryDark"
        app:icon="@drawable/ic_menu_info_outline_darkgreen_24dp"
        app:iconTint="@color/colorPrimaryDark"
        app:iconSize="@dimen/size_guide_hint_icon"
        android:text="@string/guide_delete_items"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom_hor_80"/>

    <ImageView
        android:id="@+id/guide_tap_delete_img"
        android:layout_width="@dimen/size_guide_gesture_icon"
        android:layout_height="@dimen/size_guide_gesture_icon"
        android:layout_marginStart="48dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/fragment_showcase"
        app:layout_constraintEnd_toEndOf="@id/fragment_showcase"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/fragment_showcase"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98"
        app:srcCompat="@drawable/ic_guide_tap_rot90_cut"/>

    <!-- Guide: floating menu invoke -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/guide_show_floating_menu_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Hint"
        app:cornerRadius="@dimen/corners_guide_hint"
        app:rippleColor="@color/colorPrimaryDark"
        app:icon="@drawable/ic_menu_info_outline_darkgreen_24dp"
        app:iconTint="@color/colorPrimaryDark"
        app:iconSize="@dimen/size_guide_hint_icon"
        android:text="@string/guide_floating_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom_hor_80"/>

    <ImageView
        android:id="@+id/guide_show_floating_menu_img"
        android:layout_width="@dimen/size_guide_gesture_icon"
        android:layout_height="@dimen/size_guide_gesture_icon"
        android:visibility="invisible"
        app:srcCompat="@drawable/ic_guide_press_and_hold_rot90_cut"
        app:layout_constraintEnd_toStartOf="@id/fab"
        app:layout_constraintTop_toTopOf="@id/fab"
        app:layout_constraintBottom_toBottomOf="@id/fab"/>

    <!-- Guide: floating menu help -->

    <FrameLayout
        android:id="@+id/guide_floating_menu_help_clicker"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:onClick="onHintClick"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/guide_floating_menu_check_all_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Guide.Text.Main.Light"
        android:text="@string/guide_check_all"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintBottom_toBottomOf="@id/fam_check_all"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fam_check_all"
        app:layout_constraintTop_toTopOf="@id/fam_check_all"/>

    <TextView
        android:id="@+id/guide_floating_menu_del_checked_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Guide.Text.Main.Light"
        android:text="@string/guide_del_checked"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintBottom_toBottomOf="@id/fam_del_all"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fam_del_all"
        app:layout_constraintTop_toTopOf="@id/fam_del_all"/>

    <TextView
        android:id="@+id/guide_floating_menu_close_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Guide.Text.Main.Light"
        android:text="@string/guide_close_menu"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintBottom_toBottomOf="@id/fab"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fab"
        app:layout_constraintTop_toTopOf="@id/fab"/>

</androidx.constraintlayout.widget.ConstraintLayout>
